--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,8 @@
-
-/* Your CSS Code here. */
+form{
+	display: flex;
+	flex-direction: column; 
+	justify-content: center; 
+	align-items: center;
+	margin:50px; 
+	gap: 10px; 
+}
