--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ form{
 	display: flex;
 	flex-direction: column; 
 	justify-content: center; 
-	align-items: center;
+	align-items: row;
 	margin:50px; 
 	gap: 10px; 
 }
